CompilerNetwork/User/0e984725-c51c-4bf4-9960-e1c80e27aba0/ERROR_0e984725-c51c-4bf4-9960-e1c80e27aba0_0e984725-c51c-4bf4-9960-e1c80e27aba1_916f548a-6a99-4913-916e-88984397c337.txt
Code.cpp: In function 'int main()':
Code.cpp:8:5: error: 'cinn' was not declared in this scope
     cinn>>a>>b>>c;
     ^
